# python-orb-slam3

./: .gitignore  CMakeLists.txt  README.md  build.py  pdm_build.py  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml
python_orb_slam3/: __init__.py
src/: NDArrayConverter.cc  NDArrayConverter.h  ORBextractor.cc  ORBextractor.h  main.cc
test/: manual.py  test_orb.py
